[package]
name = "esp32-rotary-knob-test"
version = "0.1.0"
authors = ["jmcmurray <jamesmcm03@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }

esp-idf-hal = { version = "0.40.1"}
esp-idf-svc = { version = "0.45.0"}
anyhow = "1.0.70"
log = "0.4.17"
once_cell = "1.17.1"
rotary-encoder-hal = "0.5.0"
embedded-hal = "0.2.7"
 
 


[build-dependencies]
embuild = "0.31.1"
